@@ -2,6 +2,9 @@ dc.parfit <-
 function(cl, data, params, model, inits, n.clones, multiply=NULL, unchanged=NULL,
 flavour = c("jags", "bugs"), ...)
 {
+    ## stop if rjags not found
+    if (flavour=="jags" && !suppressWarnings(require(rjags)))
+        stop("there is no package called 'rjags'")
     ## initail evals
     if (!inherits(cl, "cluster"))
         stop("'cl' must be a 'cluster' object")
