@@ -2,6 +2,9 @@ update.mcmc.list <-
 function(object, fun, times = 1, n.update = 0, 
 n.iter, thin, ...)
 {
+    ## stop if rjags not found
+    if (!suppressWarnings(require(rjags)))
+        stop("there is no package called 'rjags'")
     ## eval of args
     if (is.null(updated.model(object)))
         stop("updated model not found")
