@@ -4,7 +4,7 @@ citEntry(entry = "Article",
     title        = "dclone: Data Cloning in {R}",
     author       = personList(as.person("P\\'{e}ter S\\'{o}lymos")),
     journal      = "The R Journal",
-    year         = "2010, in press",
+    year         = "2010",
     volume       = "2",
     number       = "2",
     pages        = "29--37",
@@ -12,7 +12,7 @@ citEntry(entry = "Article",
     note         = paste("{R} package version:", 
         read.dcf(file=system.file("DESCRIPTION", package="dclone"), fields="Version")),
     textVersion  =
-    paste("Peter Solymos (2010, in press).",
+    paste("Peter Solymos (2010).",
         "dclone: Data Cloning in R.",
         "The R Journal 2(2), 29-37.",
         "http://journal.r-project.org/.",
